fix: hides carousel arrows on smaller screens and removes rule from home

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -175,10 +175,6 @@
 
     .reviews {
 
-      .dynamic-carousel .slick-arrow {
-        display: none !important;
-      }
-
       .review-card {
         padding-left: 30px;
         padding-right: 30px;
