--- a/src/utils/carousel/carousel.scss
+++ b/src/utils/carousel/carousel.scss
@@ -63,3 +63,11 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .dynamic-carousel {
+    .slick-arrow {
+      display: none !important;
+    }
+  }
+}
